# Aker

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: default.frag  default.vert  default_light.frag
src/: Application.cpp  Application.h  GLWindow.cpp  GLWindow.h  main.cpp
src/Utils/: Logger.cpp  Logger.h
src/renderer/: IBase.h  camera.cpp  camera.h  light.cpp  light.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  vertex.h  vertex_buffer.cpp  vertex_buffer.h
src/renderer/primitive/: cube.h  square.h  triangle.h
src/renderer/shaders/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  shader_manager.cpp  shader_manager.h
src/shaders/: Shader.cpp  Shader.h  ShaderProgram.h
src/utils/: Logger.cpp  Logger.h
